Bug 46968 - Resize text box does not undo
Summary: Resize text box does not undo
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Uray M. János
URL:
Whiteboard: target:3.7.0 target:3.6.1
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-04 19:33 UTC by skiani
Modified: 2012-08-10 20:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Video showing problem (2.11 MB, video/ogg)
2012-03-05 19:33 UTC, skiani
Details

Note You need to log in before you can comment on or make changes to this bug.
Description skiani 2012-03-04 19:33:41 UTC
If you accidentally change the size of a text box in draw or presentation then try to undo it will not change the size of the bounding box back to original size. See attached video demonstration.
Comment 1 Rainer Bielefeld Retired 2012-03-04 22:36:42 UTC
@reporter: 
What's your Operating System?
No video attached!
Comment 2 skiani 2012-03-05 19:33:38 UTC
Created attachment 58048 [details]
Video showing problem

This video illustrates the problem. (file size limit last time). Start of video is a little odd after compressing. But basically you see a text box that is size the text (just default entered text). Then the box is resized. The Undo button is hit, which should return it back to the fitted box. But, the bounding box is stuck to the pre-undo state which is clear when you turn on the outline text.

Strangely if the box outline is showing before you make any changes undo works as you expect.
Comment 3 skiani 2012-03-05 19:34:58 UTC
While I marked as Linux x64 I believe problem is also present on windows.
Comment 4 sasha.libreoffice 2012-04-04 05:31:18 UTC
Reproduced in 3.3.4 and 3.5.1 on Fedora 64 bit and 3.5.0 on Windows 7
Steps to reproduce:
0. Start Impress
1. Change layout to empty slide
2. Draw rectangle using "Text box" tool on "Drawing" toolbar
3. enter some text in this toolbar
4. Select textbox frame, rightclick, Area in context menu, change color
5. Increase textbox vertically
6. Undo it
7. Place text cursor into text
Expected: textbox as after step 4.
Actually: colored as after step 4, but size of text frame is as after step 5
8. save presentation
9. File->Reload
Expected: slide looking as before step 9
Actually: hight of colored rectangle increased
Comment 5 Not Assigned 2012-07-30 13:59:03 UTC
Uray M. Janos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9348c529d34b0bb457e750b3d5bcbb348995367e

fdo#46968 fixing undo of textbox resizing
Comment 6 Not Assigned 2012-08-10 19:55:31 UTC
Uray M. Janos committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3947c90f4bb15f272ecee86609953638302753f5&g=libreoffice-3-6

fdo#46968 fixing undo of textbox resizing


It will be available in LibreOffice 3.6.1.