fdo#46968 fixing undo of textbox resizing

Change-Id: Ic647e5c337987985f749b67113892a01f74ee8f9